--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,26 +2,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-        "label": "Setup Meson",
-        "runOptions": {
-          "runOn": "folderOpen"
-        },
-        "type": "process",
-        "problemMatcher": ["$meson-gcc"],
-        "command": "meson",
-        "args": [
-          "setup",
-          "${config:mesonbuild.buildFolder}"
-        ],
-        "osx":{
-          "options": {
-            "env": {
-              "CC": "gcc-12",
-              "CXX": "g++-12",
-              "CXX_LD": "g++-12"
-            }
-          }
-        }
+      "label": "Build Release",
+      "dependsOn": ["Configure Release", "Meson: Build all targets"],
+      "dependsOrder": "sequence"
     },
     {
       "label": "Build Debug (Release)",
@@ -39,9 +22,44 @@
       "dependsOrder": "sequence"
     },
     {
-      "label": "Build Release",
-      "dependsOn": ["Configure Release", "Meson: Build all targets"],
-      "dependsOrder": "sequence"
+      "label": "msbuild (Final)",
+      "type": "process",
+      "command": "msbuild",
+      "args": ["/m", "/p:Configuration=Final", "RTEA.sln"]
+    },
+    {
+      "label": "msbuild (Debug Release)",
+      "type": "process",
+      "command": "msbuild",
+      "args": ["/m", "/p:Configuration=\"Debug Release\"", "RTEA.sln"]
+    },
+    {
+      "label": "msbuild (Debug Minimal)",
+      "type": "process",
+      "command": "msbuild",
+      "args": ["/m", "/p:Configuration=\"Debug Minimal\"", "RTEA.sln"]
+    },
+    {
+      "label": "msbuild (Debug Full)",
+      "type": "process",
+      "command": "msbuild",
+      "args": ["/m", "/p:Configuration=\"Debug Full\"", "RTEA.sln"]
+    },
+    {
+      "label": "Setup Meson",
+      "type": "process",
+      "problemMatcher": ["$meson-gcc"],
+      "command": "meson",
+      "args": ["setup", "${config:mesonbuild.buildFolder}"],
+      "osx": {
+        "options": {
+          "env": {
+            "CC": "gcc-12",
+            "CXX": "g++-12",
+            "CXX_LD": "g++-12"
+          }
+        }
+      }
     },
     {
       "label": "Configure Debug (Release)",
