use prebuilt libraries by default

--- a/external/sources/LuaJIT-2.1/meson.build
+++ b/external/sources/LuaJIT-2.1/meson.build
@@ -15,13 +15,22 @@ dynasm = files('dynasm/dynasm.lua')
 
 subdir('src')
 
-libluajit = library(lj_libname, ljlib_sources + ljcore_sources + buildvm_headers,
-    include_directories: luajit_source_dir,
-    c_args: lj_defines,
-    name_prefix: lj_libprefix,
-    dependencies: luajit_dependencies,
-    install: true
-)
+if not get_option('use_prebuilt_libraries') or host_machine.system() in ['darwin', 'linux']
+    libluajit = library(lj_libname, ljlib_sources + ljcore_sources + buildvm_headers,
+        include_directories: luajit_source_dir,
+        c_args: lj_defines,
+        name_prefix: lj_libprefix,
+        dependencies: luajit_dependencies,
+        install: true
+    )
+else
+    libluajit = []
+    if get_option('debug')
+        luajit_dependencies += cc.find_library('luajit-debug', dirs: meson.current_source_dir()/'_Bin')
+    else
+        luajit_dependencies += cc.find_library('luajit-release', dirs: meson.current_source_dir()/'_Bin')
+    endif
+endif
 
 luajit_dep = declare_dependency(
     dependencies : luajit_dependencies,
