--- a/external/sources/SDL2-2.26.3/meson_options.txt
+++ b/external/sources/SDL2-2.26.3/meson_options.txt
@@ -231,3 +231,5 @@ option(
     value : true,
     description : 'automatically link against sdl2main'
 )
+
+option('use_prebuilt_libraries', type: 'boolean', value: true, yield: true, description: 'On windows use the prebuilt libraries')
