--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,22 +2,22 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Build Release",
+      "label": "meson Build Release",
       "dependsOn": ["Configure Release", "Meson: Build all targets"],
       "dependsOrder": "sequence"
     },
     {
-      "label": "Build Debug (Release)",
+      "label": "meson Build Debug (Release)",
       "dependsOn": ["Configure Debug (Release)", "Meson: Build all targets"],
       "dependsOrder": "sequence"
     },
     {
-      "label": "Build Debug (Minimal)",
+      "label": "meson Build Debug (Minimal)",
       "dependsOn": ["Configure Debug (Minimal)", "Meson: Build all targets"],
       "dependsOrder": "sequence"
     },
     {
-      "label": "Build Debug (Full)",
+      "label": "meson Build Debug (Full)",
       "dependsOn": ["Configure Debug (Full)", "Meson: Build all targets"],
       "dependsOrder": "sequence"
     },
@@ -27,8 +27,8 @@
       "problemMatcher": ["$meson-gcc"],
       "command": "meson",
       "args": ["setup", "${config:mesonbuild.buildFolder}"],
-      "windows" : {
-        "args": ["setup", "${config:mesonbuild.buildFolder}", "--vsenv"],
+      "windows": {
+        "args": ["setup", "${config:mesonbuild.buildFolder}", "--vsenv"]
       },
       "osx": {
         "options": {
@@ -45,6 +45,7 @@
       "type": "process",
       "problemMatcher": ["$meson-gcc"],
       "command": "meson",
+      "hide": true,
       "args": [
         "configure",
         "--buildtype=debug",
@@ -66,6 +67,7 @@
       "type": "process",
       "problemMatcher": ["$meson-gcc"],
       "command": "meson",
+      "hide": true,
       "args": [
         "configure",
         "--buildtype=debug",
@@ -81,13 +83,13 @@
           "${config:mesonbuild.buildFolder}"
         ]
       }
-
     },
     {
       "label": "Configure Debug (Full)",
       "type": "process",
       "problemMatcher": ["$meson-gcc"],
       "command": "meson",
+      "hide": true,
       "args": [
         "configure",
         "--buildtype=debug",
@@ -109,6 +111,7 @@
       "type": "process",
       "problemMatcher": ["$meson-gcc"],
       "command": "meson",
+      "hide": true,
       "args": [
         "configure",
         "--buildtype=release",
@@ -126,6 +129,7 @@
     },
     {
       "type": "meson",
+      "hide": true,
       "mode": "build",
       "problemMatcher": ["$meson-gcc"],
       "group": "build"
