--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
       "preLaunchTask": "meson Build Release",
       "envFile": "${workspaceFolder}/${config:mesonbuild.buildFolder}/meson-vscode.env",
       "presentation": {
-        "group": "unix",
+        "group": "unix"
       }
     },
     {
@@ -31,7 +31,7 @@
       "preLaunchTask": "meson Build Debug (Release)",
       "envFile": "${workspaceFolder}/${config:mesonbuild.buildFolder}/meson-vscode.env",
       "presentation": {
-        "group": "unix",
+        "group": "unix"
       }
     },
     {
@@ -46,7 +46,7 @@
       "preLaunchTask": "meson Build Debug (Minimal)",
       "envFile": "${workspaceFolder}/${config:mesonbuild.buildFolder}/meson-vscode.env",
       "presentation": {
-        "group": "unix",
+        "group": "unix"
       }
     },
     {
@@ -61,16 +61,9 @@
       "preLaunchTask": "meson Build Debug (Full)",
       "envFile": "${workspaceFolder}/${config:mesonbuild.buildFolder}/meson-vscode.env",
       "presentation": {
-        "group": "unix",
+        "group": "unix"
       }
     },
-
-
-
-
-
-
-
 
     {
       "name": "msbuild Launch",
@@ -80,7 +73,7 @@
       "cwd": "${workspaceFolder}/../Cortex-Command-Community-Project-Data",
       "preLaunchTask": "msbuild (Final)",
       "presentation": {
-        "group": "windows",
+        "group": "windows"
       }
     },
     {
@@ -91,7 +84,7 @@
       "cwd": "${workspaceFolder}/../Cortex-Command-Community-Project-Data",
       "preLaunchTask": "msbuild (Debug Release)",
       "presentation": {
-        "group": "windows",
+        "group": "windows"
       }
     },
     {
@@ -102,7 +95,7 @@
       "cwd": "${workspaceFolder}/../Cortex-Command-Community-Project-Data",
       "preLaunchTask": "msbuild (Debug Minimal)",
       "presentation": {
-        "group": "windows",
+        "group": "windows"
       }
     },
     {
@@ -113,10 +106,9 @@
       "cwd": "${workspaceFolder}/../Cortex-Command-Community-Project-Data",
       "preLaunchTask": "msbuild (Debug Full)",
       "presentation": {
-        "group": "windows",
+        "group": "windows"
       }
     },
-
 
     {
       "name": "meson Launch [Windows]",
@@ -127,8 +119,8 @@
       "preLaunchTask": "meson Build Release",
       "envFile": "${workspaceFolder}/${config:mesonbuild.buildFolder}/meson-vscode.env",
       "presentation": {
-        "group": "windows",
-      },
+        "group": "windows"
+      }
     },
     {
       "name": "meson Debug (Release) [Windows]",
@@ -139,7 +131,7 @@
       "preLaunchTask": "meson Build Debug (Release)",
       "envFile": "${workspaceFolder}/${config:mesonbuild.buildFolder}/meson-vscode.env",
       "presentation": {
-        "group": "windows",
+        "group": "windows"
       }
     },
     {
@@ -151,7 +143,7 @@
       "preLaunchTask": "meson Build Debug (Minimal)",
       "envFile": "${workspaceFolder}/${config:mesonbuild.buildFolder}/meson-vscode.env",
       "presentation": {
-        "group": "windows",
+        "group": "windows"
       }
     },
     {
@@ -163,10 +155,8 @@
       "preLaunchTask": "meson Build Debug (Full)",
       "envFile": "${workspaceFolder}/${config:mesonbuild.buildFolder}/meson-vscode.env",
       "presentation": {
-        "group": "windows",
+        "group": "windows"
       }
-    },
-
-
+    }
   ]
 }
