Fix typo in path echoing

--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -169,7 +169,7 @@ jobs:
       
       - run: choco uninstall -y mingw
       
-      - run: echo %PATH
+      - run: echo %PATH%
         shell: cmd
 
       - run: set
