--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -174,6 +174,9 @@ jobs:
 
       - run: get-command gcc
         shell: powershell
+
+      - run: choco uninstall -y mingw
+        shell: cmd
       
       - run: where gcc
 
@@ -193,7 +196,7 @@ jobs:
 
       - run: get-command gcc
         shell: powershell
-
+        
       - name: Setup Meson
         run: |
           meson setup --vsenv build
