--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -196,6 +196,9 @@ jobs:
 
       - run: get-command gcc
         shell: powershell
+
+      - run: rm -rf C:\Strawberry
+        shell: bash
         
       - name: Setup Meson
         run: |
